# music-tools

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json
cpp/: CMakeLists.txt  export.cpp
first-party/: CMakeLists.txt
src/main/: FileManager.ts  index.ts
src/renderer/: components.d.ts
src/renderer/src/: App.vue  main.ts
src/renderer/src/components/: ConverDialog.vue  EditMetadataDialog.vue
src/renderer/src/stores/: stores.ts
